--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,10 @@
 		<artifactId>spring-boot-starter-data-mongodb</artifactId>
 	</dependency>
 	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-messaging</artifactId>
+	</dependency>
+	<dependency>
 		<groupId>io.jsonwebtoken</groupId>
 		<artifactId>jjwt-api</artifactId>
 		<version>0.11.2</version>
