--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.data.mongodb.database=AskABot
 #spring.data.mongodb.uri=${DB_URI}
 jwtSecret:${JWT_SECRET}
 jwt.expiration= 3600000
-
+openai.api.url=${OPENAI_URL}
+openai.api.key=${OPENAI_API_KEY}
