--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=AskABot
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
 spring.data.mongodb.database=AskABot
-spring.data.mongodb.uri=${DB_URI}
+#spring.data.mongodb.uri=${DB_URI}
 jwtSecret:${JWT_SECRET}
 jwt.expiration= 3600000
 openai.api.url=${OPENAI_URL}
