--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=AskABot
 #spring.data.mongodb.uri=${DB_URI}
 jwtSecret:${JWT_SECRET}
+stripeKey:${STRIPE_KEY}
 jwt.expiration= 3600000
 openai.api.url=${OPENAI_URL}
 openai.api.key=${OPENAI_API_KEY}
