--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=AskABot
-spring.data.mongodb.host=localhost
+#spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
-#spring.data.mongodb.database=AskABot
+spring.data.mongodb.database=AskABot
 spring.data.mongodb.uri=${DB_URI}
 jwtSecret:${JWT_SECRET}
 stripeKey:${STRIPE_KEY}
